# cyrus-mod-examples

./: CMakeLists.txt  readme.md
chat-style/: CMakeLists.txt  README.md
chat-style/src/: chat_parser.h  main.cpp
chat-style/src/Cyrus/: DML.h  MemoryMessage.h  dbghelp.lib  shared.h  storage.h
chat-style/src/Cyrus/Classes/: AccompanyNPCBehaviorTemplate.h  AccousticAreaBehavior.h  AchieveRankGoalTemplate.h  AcousticAreaBehaviorTemplate.h  ActCinematicStageTemplate.h  ActivateHangingEffectCinematicAction.h  ActiveClassProject.h  ActiveMapQuestsCommon.h  ActiveMusicLoop.h  ActiveTimedAccessPassList.h  ActiveTimedPassEntry.h  ActorCinematicAction.h  ActorDialog.h  ActorDialogBase.h  ActorDialogCinematicAction.h  ActorDialogEntry.h  ActorDialogList.h  ActorDialogListBase.h  ActorMadlib.h  ActorRenameCinematicAction.h  AddAuraCinematicAction.h  AddAuraCinematicStageTemplate.h  AddBacklashEffectCinematicAction.h  AddCameraMappingCinematicAction.h  AddGlobalCinematicStageTemplate.h  AddHangingCinematicStageTemplate.h  AddHangingEffectCinematicAction.h  AddInterceptCinematicAction.h  AddMatchUpdate.h  AddSpellLootInfo.h  AddTeamToMatchUpdate.h  AddTeamUpdate.h  AdvPvPActor.h  AdvPvPEloBehavior.h  AdvPvPEloEntryListWrapper.h  AdvPvPEloRecord.h  AdvPvPLeaderboardEntry.h  AdvPvPLeaderboardEntryList.h  AdvPvPLeaderboardVisualBlob.h  AdvPvPLeagueAwardInfo.h  (+1464 more)
